# Aura--Downloader

./: .env.example  App.tsx  DEPLOY_INSTRUCTIONS.md  LICENSE  Procfile  README.md  constants.ts  formats_check.json  guide.md  index.html  meta_size_debug.json  meta_size_debug_utf8.json  metadata.json  nixpacks.toml  package-lock.json  package.json  platformsData.ts  pyproject.toml  railway.json  requirements.txt  tailwind.config.js  types.ts  vercel.json  vite.config.ts
api/: download.ts  fetch.ts  main.py
components/: Footer.tsx  Header.tsx  PlatformMarquee.tsx  PlaylistResult.tsx  ResultCard.tsx  ScrollButtons.tsx
pages/: About.tsx  DMCA.tsx  FAQ.tsx  Home.tsx  Platforms.tsx  Privacy.tsx  Terms.tsx
playlist-downloader/: README.md  index.js  package-lock.json  package.json
services/: logoService.ts  mockApi.ts
